--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
   <div id="container">
-    <h1 id="title">ChatGPT - Life akes Easier</h1>
-    <h4 id="subtitle">Powered by OPENAI</h4>
+    <h1 id="title">Sample Chat-GPT Application</h1>
     <form>
-      <input type="text" class="input" id="msg-input" value="Type your message..."/>
+      <input type="text" class="input" id="msg-input" value="How I can Assest you"/>
       <button id="msg-send">Get Answer</button>
     </form>
-    <div id="msg-response">Please Wait .....</div>
+    <div id="msg-response">Here is your answer</div>
   </div>
   <script src="scripts/index.js"></script>
 </body>
